@@ -15,13 +15,13 @@
  */
 package com.android.tools.idea.logcat.output;
 
+import com.google.common.collect.ImmutableList;
 import com.intellij.openapi.options.Configurable;
 import com.intellij.openapi.options.SimpleConfigurable;
 import com.intellij.xdebugger.settings.DebuggerConfigurableProvider;
 import com.intellij.xdebugger.settings.DebuggerSettingsCategory;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
 import org.jetbrains.annotations.NotNull;
 
 public class LogcatOutputConfigurableProvider extends DebuggerConfigurableProvider {
@@ -38,8 +38,8 @@ public class LogcatOutputConfigurableProvider extends DebuggerConfigurableProvid
   @Override
   public Collection<? extends Configurable> getConfigurables(@NotNull DebuggerSettingsCategory category) {
     if (LogcatOutputConfigurableUi.shouldShow() && category == DebuggerSettingsCategory.GENERAL) {
-      return List.of(SimpleConfigurable.create(ID, DISPLAY_NAME, LogcatOutputConfigurableUi.class,
-                                               () -> LogcatOutputSettings.getInstance()));
+      return ImmutableList.of(SimpleConfigurable.create(ID, DISPLAY_NAME, LogcatOutputConfigurableUi.class,
+                                                        () -> LogcatOutputSettings.getInstance()));
     }
     return Collections.emptyList();
   }
